<resources>
    <string name="app_name">Universe Live</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="diffusionlive">DIFFUSION VIDEO LIVE</string>
    <string name="mesvideo">MES VIDEOS</string>
    <string name="decouvrir">DECOUVRIR</string>
    <string name="monprofil">MON PROFIL</string>
    <string name="feedback">FEEDBACK</string>
    <string name="Logout">DECONNECT</string>
    <string name="action">Action</string>
    <string name="Home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="live">LIVE</string>
    <string name="share_broadcast">Share Broadcast</string>
    <string name="buffering">BUFFERING</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="effects_chooser_title">Effects</string>
    <string name="error_no_recorderconfig">You must provide a RecorderConfig object before starting the BroadcastActivity. See Kickflip#setRecorderConfig</string>
    <string name="error_no_broadcastlistener">You must provide a BroadcastListener</string>

    <string name="txtTitle">Universe Live</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="btnSignup">signup</string>
</resources>
